Fixing scroll bar and cutoff

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -199,6 +199,8 @@
                 margin-left: -15px;
                 padding-top: 15px;
                 margin-top: -15px;
+                padding-right: 15px;
+                margin-right: -15px;
               }
             }
 
